--- a/apps/reatom/index.html
+++ b/apps/reatom/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>reatom</title>
+    <title>Musicfun Reatom</title>
+    <!-- SPA redirect handler for GitHub Pages -->
+    <script>
+      (function() {
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect !== location.href) {
+          history.replaceState(null, null, redirect);
+        }
+
+        // Check for spa_redirect query parameter
+        var searchParams = new URLSearchParams(window.location.search);
+        var spaRedirect = searchParams.get('spa_redirect');
+        if (spaRedirect) {
+          searchParams.delete('spa_redirect');
+          var newSearch = searchParams.toString();
+          var newUrl = decodeURIComponent(spaRedirect);
+          sessionStorage.redirect = newUrl;
+          window.location.replace(window.location.pathname + (newSearch ? '?' + newSearch : ''));
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
